@@ -81,10 +81,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>
-                        <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito
-                        .version}/mockito-core-${mockito.version}.jar -Xshare:off</argLine>
-                    </argLine>
+                    <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                 </configuration>
             </plugin>
         </plugins>
